[package]
name = "oppa"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rawsock = "0.3.0"
once_cell = "1.10.0"
custom_debug_derive = "0.1.7"
nom = "5.0.1"
derive-try-from-primitive = "1.0.0"
thiserror = "1.0.31"
ux = "0.1.4"
paste = "1.0.7"
cookie-factory = "0.3.2"
crossbeam-utils = "0.8.10"
bitvec = "1.0.1"
rand = "0.8.5"

[profile.release]
lto = true
